--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -238,6 +238,15 @@
 /* Label for creating a new group */
 "chat.create.new.group" = "ایجاد گروه جدید";
 
+/* Button to retract a chat message for everyone */
+"chat.delete.everyone" = "حذف برای همه";
+
+/* Button to locally delete a chat message */
+"chat.delete.me" = "حذف برای من";
+
+/* Title of deletion menu */
+"chat.delete.title" = "حذف پیام انتخاب شده؟";
+
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
 "chat.encryption.label" = "گفتگوها رمزگذاری سرتاسری شده‌اند و هالواپ به آن‌ها دسترسی ندارد. برای اطلاعات بیشتر کلیک کنید.";
 
@@ -922,6 +931,9 @@
 /* Label indicating that media was successfully saved to the camera roll */
 "media.save.saved" = "عکس‌ها در آلبوم دوربین ذخیره شدند";
 
+/* Accessibility label for a button in media editor. Refers to media editing action. */
+"media.voiceover.button.annotate" = "ویرایش";
+
 /* Accessibility label for X (Close) button in media editor. */
 "media.voiceover.button.close" = "بستن";
 
@@ -975,6 +987,9 @@
 
 /* Indicates how many invites are remaining */
 "n.invites.remaining" = "n.invites.remaining";
+
+/* Summary when multiple commenters commented on the same post you commented on */
+"n.others.replied" = "n.others.replied";
 
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "%@ پست حذف شدند";
@@ -1580,6 +1595,15 @@
 /* Post deletion confirmation. Displayed as action sheet title. */
 "your.post.deletepost.confirmation" = "مطمئینید این پست را میخواهید حذف کنید؟ این کار برگشت ناپذیر است.";
 
+/* Title for button in action sheet prompting user to share post to external sites */
+"your.post.externalshare.copylink" = "کپی لینک برای به اشتراک گذاشتن";
+
+/* Success toast when external share link is copied */
+"your.post.externalshare.copylink.success" = "کپی شد";
+
 /* Message that external share failed. */
 "your.post.externalshare.error" = "خطا در بارگذاری پست برای به اشتراک گذاشتن خارجی";
+
+/* Text introducing external share link, part of what is shared */
+"your.post.externalshare.title" = "پستمن را در هالواپ ببینید";
 
