--- a/Halloapp/de.lproj/Localizable.stringsdict
+++ b/Halloapp/de.lproj/Localizable.stringsdict
@@ -175,9 +175,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>&lt;$user$&gt; and %d other replied to &lt;$author$&gt;'s post</string>
+			<string>&lt;$user$&gt; und %d andere Person haben auf &lt;$author$&gt;'s Beitrag geantwortet</string>
 			<key>other</key>
-			<string>&lt;$user$&gt; and %d others replied to &lt;$author$&gt;'s post</string>
+			<string>&lt;$user$&gt; und %d andere Personen haben auf &lt;$author$&gt;'s Beitrag geantwortet</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
