--- a/Halloapp/fa.lproj/Localizable.stringsdict
+++ b/Halloapp/fa.lproj/Localizable.stringsdict
@@ -175,9 +175,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>&lt;$user$&gt; and %d other replied to &lt;$author$&gt;'s post</string>
+			<string>&lt;$user$&gt; و d% نفر دیگر زیر پست &lt;$author$&gt; نظر نوشت</string>
 			<key>other</key>
-			<string>&lt;$user$&gt; and %d others replied to &lt;$author$&gt;'s post</string>
+			<string>&lt;$user$&gt; و d% نفر دیگر زیر پست &lt;$author$&gt; نظر نوشتند</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
