--- a/Halloapp/pt.lproj/Localizable.stringsdict
+++ b/Halloapp/pt.lproj/Localizable.stringsdict
@@ -167,7 +167,7 @@
 	<key>n.others.replied</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_others_replied@</string>
+		<string>%#@n_outros_responderam@</string>
 		<key>n_others_replied</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -175,9 +175,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>&lt;$user$&gt; and %d other replied to &lt;$author$&gt;'s post</string>
+			<string>&lt;$usuario$&gt; e %d outro respondeu para a postagem do &lt;$autor$&gt;</string>
 			<key>other</key>
-			<string>&lt;$user$&gt; and %d others replied to &lt;$author$&gt;'s post</string>
+			<string>&lt;$usuario$&gt; e %d outros responderam para a postagem do &lt;$autor$&gt;</string>
 		</dict>
 	</dict>
 	<key>notification.n.photos</key>
