--- a/Notification Service Extension/ru.lproj/Localizable.strings
+++ b/Notification Service Extension/ru.lproj/Localizable.strings
@@ -149,7 +149,13 @@
 "notification.voicecall.missed" = "Пропущенный голосовой вызов";
 
 /* New post notification text when post is a voice note. */
+"notification.voicecomment" = "🎤 Аудиокомментарий";
+
+/* New post notification text when post is a voice note. */
 "notification.voicenote" = "🎤 Голосовая заметка";
+
+/* New post notification text when post is a voice note. */
+"notification.voicepost" = "🎤 Аудиопост";
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Присоединяйся к моей сети настоящих отношений в HalloApp. Скачай бесплатно на halloapp.com/dl";
